--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Port=5432;Database=PartyInviter;User Id=postgres;Password=root;"
+  },
+  "Salt": "abccba123321"
 }
