--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -20,9 +20,7 @@
     "PartyInviter": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
